# DXX-Raytracer-ar

./: CMakeLists.txt  CMakePresets.json
RT/: RTgr.c  RTgr.h  RTmaterials.c  dx12.c  dx12.h  material_viewer.cpp  polymodel_viewer.cpp
RT/Game/: Level.h  level.c
RT/Renderer/Backend/Common/include/: Renderer.h
RT/Renderer/Backend/DX12/assets/shaders/: direct_lighting.hlsli  direct_lighting_inline.hlsl  indirect_lighting.hlsl  indirect_lighting_inline.hlsl  occlusion.hlsl  portal_retrace_ray.hlsl  primary_ray.hlsl  primary_ray.hlsli  primary_ray_inline.hlsl
RT/Renderer/Backend/DX12/assets/shaders/include/: common.hlsl
RT/Renderer/Backend/DX12/assets/shaders/include_shared/: shared_common.hlsl.h  shared_tweakvars.hlsl.h
RT/Renderer/Backend/DX12/src/: GLTFLoader.cpp  GlobalDX.h  RenderBackend.cpp  RenderBackend.h  Renderer.cpp  main.cpp
d1/: CMakeLists.txt
d1/2d/: rle.c
d1/arch/sdl/: digi_mixer.c
d1/assets/render_presets/: default.vars  gamer.vars
d1/main/: endlevel.c  game.c  gamecntl.c  gamerend.c  gauges.c  kconfig.c  kmatrix.c  lighting.c  menu.c  morph.c  multi.h  net_udp.c  piggy.c  playsave.c  playsave.h  polyobj.c  render.c  terrain.c  vers_id.h
sdl-mixer-master/: CMakeLists.txt
sdl-mixer-master/SDL/: dynamic_mp3.h
